# UpCraft

./: .gitmodules  LICENSE  README.md
client/: CMakeLists.txt
client/example/: .gitignore  CMakeLists.txt  example.cpp
client/include/: upcraft.hpp
client/src/: main.cpp  utils.cpp  utils.h
docs/: API.md  client_include.md  server_api.md
server/: .gitignore  README.md  server.py
